--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,11 +12,11 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :poster %><br />
+      <%= f.label :poster %>
       <%= f.text_field :poster %>
     </div>
     <div class="field">
-      <%= f.label :body %><br />
+      <%= f.label :body %>
       <%= f.text_area :body %>
     </div>
     <div class="actions">
