--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,5 @@
 <div class="post">
   <div class="post-body"><%= post.body %></div>
+  <%= image_tag post.image.url(:medium) %>
   <div class="post-signature"><%= post_signature(post) %></div>
 </div>
